...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title:"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:text="BOOK TITLE GOES HERE" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Author:"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:text="BOOK AUTHOR GOES HERE" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISBN:"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/bookISBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:text="BOOK ISBN GOES HERE" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status:"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/bookStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:text="BOOK STATUS GOES HERE" />

...

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/borrower_prof_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/borrowerPrompt"
...
                        android:src="@drawable/ic_account_circle_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/book_borrower_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="BORROWEREMAIL"
                        android:textSize="16sp" />
                </LinearLayout>
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/bookDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:text="BOOK DESCRIPTION GOES HERE" />

...
